version/0.25/_sources/api/solver/_autosummary/settings/olic_child.rst.txt
:orphan:

.. _olic_child:

olic_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.olic_child.olic_child
    :show-inheritance:

.. rubric:: Attributes

========================================================   =====================================================================================================

Attribute                                                                                                                                                Summary

========================================================   =====================================================================================================
:ref:`name <name_8>`                                                                                                               Specify a name for an object.

:ref:`field <field_3>`                                                                                                       Select one of the coloring options.

:ref:`vector_field <vector_field_1>`                                                        Specify whether the vectors represent velocity or relative velocity.

:ref:`vector_phase <vector_phase>`                                                                                                         'vector_phase' child.

:ref:`surfaces_list <surfaces_list>`                                                          Select the planar surface(s) where you want the results displayed.

:ref:`surfaces <surfaces_4>`                                                                                                                   'surfaces' child.

:ref:`lic_color_by_field <lic_color_by_field>`                                                                                       'lic_color_by_field' child.

:ref:`lic_color <lic_color>`                                                                                                                  'lic_color' child.

:ref:`lic_oriented <lic_oriented>`                                                                                                         'lic_oriented' child.

:ref:`lic_normalize <lic_normalize>`                                                               Normalizes the vector field magnitude during the integration.

:ref:`lic_pixel_interpolation <lic_pixel_interpolation>`                                                                        'lic_pixel_interpolation' child.

:ref:`lic_max_steps <lic_max_steps>`                                                                     Provide value for maximum number of steps used [5, 50].

:ref:`texture_spacing <texture_spacing>`                                                                                    Provide seed spacing value [4, 100].

:ref:`texture_size <texture_size>`                             Set the Texture Size slider to control the size (in 100's of pixels) of the texture image used in

:ref:`lic_intensity_factor <lic_intensity_factor>`                Scales the intensity levels of the convolution results up or down. You can use this to control

:ref:`lic_image_filter <lic_image_filter>`                                                                          Applies an image filter to the convolutions.

:ref:`lic_intensity_alpha <lic_intensity_alpha>`                                                                   Make background either transparent or opaque.

:ref:`lic_fast <lic_fast>`                                                                                                                     'lic_fast' child.

:ref:`gray_scale <gray_scale>`                                                                                                               'gray_scale' child.

:ref:`image_to_display <image_to_display>`                                                                                             'image_to_display' child.

:ref:`range_option <range_option>`                                 Specify whether you want the range to be Global, Local to the selected surface(s), or Custom.

:ref:`color_map <color_map>`                                                                                           Choose coloring using the colormap panel.

:ref:`draw_mesh <draw_mesh_1>`                                                 Select whether you would like to display the mesh alongside your graphics object.

:ref:`mesh_object <mesh_object>`                                                                                         Select properties for your mesh object.

:ref:`display_state_name <display_state_name>`                                                                         Display state settings selection by name.

========================================================   =====================================================================================================

.. rubric:: Methods

==========================   ======================

Method                                      Summary

==========================   ======================
:ref:`display <display_3>`       'display' command.

==========================   ======================

.. rubric:: Included in:

==================   =================

Parent                         Summary

==================   =================
:ref:`olic <olic>`       'olic' child.

==================   =================

